Replace the server config

--- a/Web.config
+++ b/Web.config
@@ -53,6 +53,6 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="EmployeeDB" connectionString="server=DESKTOP-ILLKLDM\SQLSERVERBARANI;database=Employee;uid=guest;password=sqlconnectPass1!;"/>
+		<add name="EmployeeDB" connectionString="server=Your server;database=Employee;uid=guest;password=Pwd;"/>
 	</connectionStrings>
 </configuration>
